2006-07-13 20:41:50  Sean Middleditch <elanthis@awesomeplay.com>

  * Release version 0.25.

2006-07-13 16:58:24  Sean Middleditch <elanthis@awesomeplay.com>

  * Rename Scriptix Object.setName to Object.setBaseName and
    document it better.
  * Rename Scriptix Entity.getFullName to Entity.getBaseName and
    document it better.
  * Fix NPC corpse generation to work properly.
  * Added Scriptix functions warning() and error(), like message()
    except using Log::Warning and Log::Error, respectively.

2006-07-13 16:47:04  Sean Middleditch <elanthis@awesomeplay.com>

  * Fix some incorrect data files caused by testing.

2006-07-13 05:35:07  Sean Middleditch <elanthis@awesomeplay.com>

  * Replaced the huge disgusting 128-bit unique IDs with something
    much smaller and simpler.  Instead of generating true UUIDs,
    we now use a simple counter.  Each new entity gets a new ID
    in sequence.  However, in order to avoid duplicate IDs caused
    by crashes, the system makes ID reserves.  It pre-allocates
    1024 IDs (this number can easily be changed, probably will be
    changed) and saves to disk this reservation.  So, if AweMUD
    crashes between allocating an ID and updating data/uniqid,
    data/uniqid will still indicate that the next available ID is
    much higher than the ones actually in use.  If AweMUD shuts
    down cleanly, the correct value is saved.

2006-07-13 04:32:49  Sean Middleditch <elanthis@awesomeplay.com>

  * Updates to combat algorithms.  No these aren't even close to
    what we're going to use long-term.
  * Reinstated Object::set_name().  Possibly needs some work on
    the script integration side.
  * Remove the 'new' keyword from Scriptix, and with it the ability
    to create new types, and also to create instances of classes.
    The former is now unused, and the latter was only used with
    Arrays.
  * Created a new array() function in Scriptix to create arrays,
    similar in spirit to PHP's array() function.
