@@ -1,3 +1,7 @@
+2006-07-13 21:28:26  Sean Middleditch <elanthis@awesomeplay.com>
+
+  * Reduce startup log messages to almost nothing.
+
 2006-07-13 20:41:50  Sean Middleditch <elanthis@awesomeplay.com>
 
   * Release version 0.25.
